Fix dark mode and readme (#22)
* Added correct global PopoverOptions overriding by local PopoverOptions + readded dark mode + clean up code

* Bumped version + updated Readme

* Fixed tests

* Fixed Readme typo

* Added IPopoverOptions export

--- a/src/components/EdcHelp.scss
+++ b/src/components/EdcHelp.scss
@@ -1,64 +1,3 @@
-.popover {
-  border: 1px solid #3c8dbc;
-}
-
-.on-dark.popover {
-  border: 1px solid #7eb0cd;
-}
-
-.popover-header {
-  font-weight: bold;
-}
-
-.hide-content .popover-header {
-  font-weight: normal;
-}
-
-.on-dark .popover-header {
-  background-color: #455a64;
-}
-
-.popover-body {
-  border-top: 3px solid #3c8dbc;
-}
-
-.on-dark .popover-body {
-  border-top: 3px solid #7eb0cd;
-}
-
-.popover-section-item {
-  background-color: transparent;
-  color: #1e82fd;
-  border: none;
-  cursor: pointer;
-  text-decoration: underline;
-  display: inline;
-  margin: 0;
-  padding: 0;
-}
-
-.on-dark .popover-section-item {
-  color: #88bbff;
-}
-
-.popover-section-item:hover,
-.popover-section-item:focus {
-  text-decoration: none;
-}
-
-.on-dark .popover-body {
-  color: #ffffff;
-  background-color: #37474f;
-}
-
-.popover-desc {
-  margin-bottom: 10px;
-}
-
-.popover-section-title {
-  font-weight: bold;
-}
-
 .help-icon {
   color: #d3d3d3;
   height: 1em;
